@@ -1128,6 +1128,9 @@ fontification, and commenting for embedded JavaScript and CSS.
 ** New mode 'conf-toml-mode' is a sub-mode of conf-mode, specialized
    for editing TOML files.
 
+** New mode 'conf-desktop-mode' is a sub-mode of conf-unix-mode,
+specialized for editing freedesktop.org desktop entries.
+
 ** New minor mode 'pixel-scroll-mode' provides smooth pixel-level scrolling.
 
 ** New major mode 'less-css-mode' (a minor variant of 'css-mode') for
